# rfi-shooter

./: Data_file_1.npz  Data_file_100.npz  Generating simulated data.ipynb  LICENSE  README.md  Simulated Data with RFI 2.npy  Simulated Data with RFI 3.npy  Simulated Data with RFI 4.npy  Simulated Data with RFI 5.npy  Simulated Data with RFI 6.npy  Simulated Data with RFI 7.npy  plot_4.npy  pyproject.toml
game/: game.py
