[tool.poetry]
name = "rfi-shooter"
version = "0.1.0"
description = "Retro RFI shooter game"
authors = ["Steven Murray <steven.g.murray@asu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
arcade = "^2.6.15"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
